--- a/docker/notebooks/Dockerfile
+++ b/docker/notebooks/Dockerfile
@@ -4,6 +4,8 @@
 #     nvidia-docker run -p 8888:8888 -it numba_gtc2017:latest
 FROM conda_cuda_base:latest
 
+RUN conda install -y scipy
+
 RUN git clone https://github.com/ContinuumIO/gtc2017-numba
 
 WORKDIR ./gtc2017-numba
