--- a/docker/notebooks/Dockerfile
+++ b/docker/notebooks/Dockerfile
@@ -4,7 +4,7 @@
 #     nvidia-docker run -p 8888:8888 -it numba_gtc2017:latest
 FROM conda_cuda_base:latest
 
-RUN conda install -y scipy
+RUN conda install -y scipy matplotlib
 
 RUN git clone https://github.com/ContinuumIO/gtc2017-numba
 
